@@ -9,53 +9,71 @@ import com.starwars.starwars_fan.sorting.SortStrategy;
 import com.starwars.starwars_fan.sorting.SortStrategyFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 
 import java.util.Comparator;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.mock;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 public class PlanetsServiceTest {
 
+    @Mock
     private SwapiClient swapiClient;
+    @Mock
     private SortStrategyFactory sortStrategyFactory;
+    @Mock
+    private SortStrategy<PlanetDto> sortStrategy;
+
+    @InjectMocks
     private PlanetsService planetsService;
+
+    private List<PlanetDto> mockPlanets;
 
     @BeforeEach
     void setUp() {
-        swapiClient = mock(SwapiClient.class);
-        sortStrategyFactory = mock(SortStrategyFactory.class);
-        planetsService = new PlanetsService(swapiClient, sortStrategyFactory);
-    }
-
-    @Test
-    void shouldFilterPlanetsByName() {
+        MockitoAnnotations.openMocks(this);
         PlanetDto tatooine = new PlanetDto(); tatooine.setName("Tatooine");
         PlanetDto naboo = new PlanetDto(); naboo.setName("Naboo");
-        when(swapiClient.fetchAllPlanets()).thenReturn(List.of(tatooine, naboo));
-
-        PagedResponse<PlanetDto> response = planetsService.getPlanets(1, 15, "tat", null);
-
-        assertEquals(1, response.getItems().size());
-        assertEquals("Tatooine", response.getItems().get(0).getName());
+        PlanetDto hoth = new PlanetDto(); hoth.setName("Hoth");
+        mockPlanets = List.of(tatooine, naboo, hoth);
     }
 
     @Test
-    void shouldSortPlanetsByNameAscending() {
-        PlanetDto yavin = new PlanetDto(); yavin.setName("Yavin");
-        PlanetDto alderaan = new PlanetDto(); alderaan.setName("Alderaan");
+    void shouldFilterPlanetsBySearch() {
+        when(swapiClient.fetchAllPlanets()).thenReturn(mockPlanets);
 
-        SortStrategy<PlanetDto> mockStrategy = mock(SortStrategy.class);
-        when(mockStrategy.getComparator(SortDirection.ASC))
-                .thenReturn(Comparator.comparing(PlanetDto::getName));
-        when(sortStrategyFactory.getStrategy("name", PlanetDto.class)).thenReturn(mockStrategy);
-        when(swapiClient.fetchAllPlanets()).thenReturn(List.of(yavin, alderaan));
+        PagedResponse<PlanetDto> result = planetsService.getPlanets(1, 10, "tat", null);
 
-        SortRequest sortRequest = new SortRequest("name", SortDirection.ASC);
-        PagedResponse<PlanetDto> response = planetsService.getPlanets(1, 15, null, sortRequest);
+        assertThat(result.getItems()).extracting(PlanetDto::getName)
+                .containsExactly("Tatooine");
+    }
 
-        assertEquals("Alderaan", response.getItems().get(0).getName());
+    @Test
+    void shouldSortPlanetsDescending() {
+        when(swapiClient.fetchAllPlanets()).thenReturn(mockPlanets);
+        when(sortStrategyFactory.getStrategy(eq("name"), eq(PlanetDto.class))).thenReturn(sortStrategy);
+        when(sortStrategy.getComparator(SortDirection.DESC))
+                .thenReturn(Comparator.comparing(PlanetDto::getName).reversed());
+
+        SortRequest sort = new SortRequest("name", SortDirection.DESC);
+        PagedResponse<PlanetDto> result = planetsService.getPlanets(1, 10, null, sort);
+
+        assertThat(result.getItems().getFirst().getName()).isEqualTo("Tatooine");
+    }
+
+    @Test
+    void shouldPaginateCorrectly() {
+        when(swapiClient.fetchAllPlanets()).thenReturn(mockPlanets);
+
+        PagedResponse<PlanetDto> result = planetsService.getPlanets(2, 1, null, null);
+
+        assertThat(result.getPage()).isEqualTo(2);
+        assertThat(result.getItems()).hasSize(1);
+        assertThat(result.getTotalPages()).isEqualTo(3);
     }
 }
